fix border skills animation mobile

--- a/CSS/sections/competences.css
+++ b/CSS/sections/competences.css
@@ -173,7 +173,7 @@
   color: var(--text-primary);
   display: inline-block;
   font-family: 'Hammersmith One', sans-serif;
-  font-size: 3rem;
+  font-size: 4.5rem;
   position: absolute;
   text-align: center;
   user-select: none;
@@ -198,6 +198,7 @@
 }
 
 .skills .rightSide .span__border.bottom {
+  bottom: 50px;
   right: 0;
   height: 5px;
   background: linear-gradient(90deg,
@@ -253,6 +254,10 @@
 .skills .leftSide .skill:nth-child(7) .skillContent p {
   font-size: 2rem;
 }
+.skills .rightSide .container-animate .animateSkill1,
+  .skills .rightSide .container-animate .animateSkill2 {
+    font-size: 5rem;
+  }
 }
 /* fin version mobile */
 /* debut version laptop */
@@ -333,110 +338,48 @@
   .skills .leftSide .skill .skillContent p {
     font-size: 2.5rem;
   }
+  
+  /* right */
+  .skills .rightSide {
+    height: 100%;
+  }
+  
+  
+  .skills .rightSide .span__border.top {
+  top: 25%;
+  }
+  .skills .rightSide .span__border.bottom {
+  bottom: 25%;
+  }
+  .skills .rightSide .span__border.right {
+  top: 25%;
+  right: 0;
+  width: 5px;
+  height: 0;
+  background: linear-gradient(
+    180deg,
+    transparent 30%,
+    rgba(255, 255, 113, 0.5),
+    rgb(255, 255, 113)
+  );
+  animation: spanAnimateRight 5s ease-in-out infinite;
+  }
+  
+  .skills .rightSide .span__border.left {
+  left: 0;
+  bottom: 25%;
+  width: 5px;
+  height: 0;
+  background: linear-gradient(
+    180deg,
+    rgb(255, 255, 113),
+    rgba(255, 255, 113, 0.5),
+    transparent 70%
+  );
+  animation: spanAnimateLeft 5s ease-in-out infinite;
+  }
 }
-
 /* skills */
-
-
-
-
-
-/* right */
-
-.skills .rightSide {
-  align-items: center;
-  display: none;
-  flex-direction: column;
-  height: 100%;
-  justify-content: center;
-  opacity: 0;
-  position: relative;
-  width: 100%;
-}
-
-.skills .rightSide .container-animate {
-  margin: auto;
-  width: 100%;
-  filter: url(#threshold) blur(0.6px);
-}
-
-.skills .rightSide .container-animate .animateSkill1,
-.skills .rightSide .container-animate .animateSkill2 {
-  position: absolute;
-  width: 100%;
-  display: inline-block;
-  color: #fff;
-  font-family: 'Hammersmith One', sans-serif;
-  font-size: 5rem;
-  text-align: center;
-  user-select: none;
-}
-
-.skills .rightSide .span__border {
-position: absolute;
-border-radius: 100vmax;
-}
-
-.skills .rightSide .span__border.top {
-top: 25%;
-left: 0;
-width: 0;
-height: 5px;
-background: linear-gradient(
-  90deg,
-  transparent 25%,
-  rgba(255, 255, 113, 0.5),
-  rgb(255, 255, 113)
-);
-animation: spanAnimateTop 5s ease-in-out infinite;
-}
-
-.skills .rightSide .span__border.bottom {
-right: 0;
-bottom: 25%;
-height: 5px;
-background: linear-gradient(
-  90deg,
-  rgb(255, 255, 113),
-  rgba(255, 255, 113, 0.5),
-  transparent 50%
-);
-animation: spanAnimateBottom 5s ease-in-out infinite;
-}
-.skills .rightSide .span__border.right {
-top: 25%;
-right: 0;
-width: 5px;
-height: 0;
-background: linear-gradient(
-  180deg,
-  transparent 30%,
-  rgba(255, 255, 113, 0.5),
-  rgb(255, 255, 113)
-);
-animation: spanAnimateRight 5s ease-in-out infinite;
-}
-
-.skills .rightSide .span__border.left {
-left: 0;
-bottom: 25%;
-width: 5px;
-height: 0;
-background: linear-gradient(
-  180deg,
-  rgb(255, 255, 113),
-  rgba(255, 255, 113, 0.5),
-  transparent 70%
-);
-animation: spanAnimateLeft 5s ease-in-out infinite;
-}
-
-.skills .skills__active {
-  display: flex;
-  opacity: 1;
-  transform: translateY(0);
-  animation: scale-in-center 1s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-}
 
 /*fin version laptop  */
 
