--- a/CSS/sections/presentation.css
+++ b/CSS/sections/presentation.css
@@ -86,7 +86,7 @@
     }
 
     .presentation--visuel img {
-    height: 300px;
+    height: 500px;
     width: auto;
     }
 
